--- a/vue基础/demo/css/musicPlayer.css
+++ b/vue基础/demo/css/musicPlayer.css
@@ -1,3 +1,8 @@
+html {
+  overflow: hidden;
+
+}
+
 body {
   background-image: url(/photo/背景.jpg);
   background-size: 100%;
@@ -16,13 +21,13 @@ input {
   margin-top: 40px;
   display: inline-block;
   width: 800px;
-  background-color: rgb(107, 103, 103);
+  background-color: rgb(158, 107, 107);
 }
 
 #playSearchPanel {
   text-align: justify;
   width: 800px;
-  background-color: rgb(120, 187, 241);
+  background-color: rgb(29, 65, 95);
   height: 50px;
   position: relative;
 }
@@ -61,4 +66,106 @@ input {
   height: 32px;
   width: 30px;
   position: absolute;
+}
+
+ul {
+  list-style: none;
+}
+
+#mainPanel {
+  text-align: justify;
+}
+
+#mainPanel {
+  overflow: hidden;
+  position: relative;
+  height: 500px;
+  width: 100%;
+}
+
+#left,
+#right {
+  text-align: justify;
+  top: 0;
+  position: absolute;
+  width: 200px;
+  height: 500px;
+  background-color: rgb(112, 97, 79);
+  overflow-y: scroll;
+}
+
+#left::-webkit-scrollbar,
+#right::-webkit-scrollbar {
+  width: 0;
+}
+
+#left {
+  left: 0;
+}
+
+
+
+#right {
+  right: 0;
+}
+
+#main {
+  text-align: center;
+  background-color: blanchedalmond;
+  margin: 0 200px;
+  height: 500px;
+}
+
+#playIcon {
+  width: 15px;
+  padding: 0px 10px;
+}
+
+#playUl {
+  padding: 10px;
+}
+
+.playLi {
+  line-height: 49px;
+  background-color: beige;
+  border: 1px solid rgb(112, 97, 79);
+  border-radius: 4px;
+}
+
+#songsName {
+  height: 15px;
+}
+
+#audioDiv {
+  height: 54px;
+}
+
+#audio {
+  width: 800px;
+  background-color: rgb(243, 244, 247);
+}
+
+#songsImgs {
+  border-radius: 50%;
+  margin: 100px 0px;
+  width: 300px;
+  height: 300px;
+}
+
+
+@keyframes fucks {
+  from {
+    transition: 0.5s ease-in
+  }
+
+  to {
+    transform: rotate(360deg)
+  }
+}
+
+
+#songsImgs {
+  animation-name: fucks;
+  animation-duration: 4s;
+  animation-iteration-count: infinite;
 }
